[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "wheel",
]
build-backend = "setuptools.build_meta"


#[tool.cibuildwheel]
#test-command = "python {project}/tests/test.py"
#test-skip = "*universal2:arm64"


[tool.ruff]
target-version = "py37"

[tool.ruff.lint]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
